--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <p><em>HTML5 Rock and Roll</em></p>
 <h2>成员介绍</h2>
 <ul>
-<li><a hre="https://github.com/Lucinda-Aemilia">Lucinda-Aemilia</a></li>
+<li><a href="https://github.com/Lucinda-Aemilia">Lucinda-Aemilia</a></li>
 </ul>
