--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <title>H5海盗团</title>
+<style>
+  div {
+  height: 400px;
+  width: 400px;
+  background: #eee;
+  margin: auto;
+}
+</style>
+<div>
 <h1>我们的目标是</h1>
 <p><em>HTML5 Rock and Roll</em></p>
 <h2>成员介绍</h2>
@@ -6,3 +15,4 @@
 <li><a href="https://github.com/Lucinda-Aemilia">Lucinda-Aemilia</a></li>
 <li><a href="https://github.com/ohanematsu ">ohanematsu</a></li>
 </ul>
+</div>
