--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </style>
 <div>
 <h1>我们的目标是</h1>
-<p><em>HTML5 Rock and Roll</em></p>
+<p><em>HTML5 Rock & Roll</em></p>
 <h2>成员介绍</h2>
 <ul>
 <li><a href="https://github.com/Lucinda-Aemilia">Lucinda-Aemilia</a></li>
