--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
 <ul>
 <li><a href="https://github.com/Lucinda-Aemilia">Lucinda-Aemilia</a></li>
 <li><a href="https://github.com/ohanematsu ">ohanematsu</a></li>
+<li><a href="https://github.com/ymjrcc ">Yiming</a></li>
 </ul>
 </div>
