--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
-<title>H5海盗团</title>
-<style>
-  div {
-  height: 400px;
-  width: 400px;
-  background: #eee;
-  margin: auto;
-}
-</style>
-<div>
-<h1>我们的目标是</h1>
-<p><em>HTML5 Rock & Roll</em></p>
-<h2>成员介绍</h2>
-<ul>
-<li><a href="https://github.com/Lucinda-Aemilia">Lucinda-Aemilia</a></li>
-<li><a href="https://github.com/ohanematsu ">ohanematsu</a></li>
-<li><a href="https://github.com/ymjrcc ">Yiming</a></li>
-</ul>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>H5Pirates</title>
+	<style>
+		div {
+  			height: 400px;
+  			width: 400px;
+  			background: #eee;
+  			margin: auto;
+			}
+	</style>
+</head>
+<body>
+	<div>
+		<h1>我们的目标是</h1>
+		<p><em>HTML5 Rock & Roll</em></p>
+		<h2>成员介绍</h2>
+		<ul>
+			<li><a href="https://github.com/Lucinda-Aemilia">Lucinda-Aemilia</a></li>
+			<li><a href="https://github.com/ohanematsu ">ohanematsu</a></li>
+			<li><a href="https://github.com/ymjrcc ">Yiming</a></li>
+		</ul>
+	</div>
+</body>
+</html>
