--- a/index.html
+++ b/index.html
@@ -2,26 +2,113 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>H5Pirates</title>
+	<title>h5p</title>
+	<link href="http://www.francescomalagrino.com/BootstrapPageGenerator/3/css/bootstrap-combined.min.css" rel="stylesheet" media="screen">
+	<script type="text/javascript" src="http://www.francescomalagrino.com/BootstrapPageGenerator/3/js/jquery-2.0.0.min.js"></script>
+	<script type="text/javascript" src="http://www.francescomalagrino.com/BootstrapPageGenerator/3/js/jquery-ui"></script>
+	<script type="text/javascript" src="http://www.francescomalagrino.com/BootstrapPageGenerator/3/js/bootstrap.min.js"></script>
 	<style>
-		div {
-  			height: 400px;
-  			width: 400px;
-  			background: #eee;
-  			margin: auto;
-			}
+		img{width:50px;height: 50px}
 	</style>
 </head>
 <body>
-	<div>
-		<h1>我们的目标是</h1>
-		<p><em>HTML5 Rock & Roll</em></p>
-		<h2>成员介绍</h2>
-		<ul>
-			<li><a href="https://github.com/Lucinda-Aemilia">Lucinda-Aemilia</a></li>
-			<li><a href="https://github.com/ohanematsu ">ohanematsu</a></li>
-			<li><a href="https://github.com/ymjrcc ">Yiming</a></li>
-		</ul>
-	</div>
+	<div class="container-fluid text-center">
+		<div class="row-fluid">
+			<div class="span12">
+				<div class="navbar">
+					<div class="navbar-inner">
+						<div class="container-fluid">
+							 <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a href="#" class="brand">H5Pirates</a>
+							<div class="nav-collapse collapse navbar-responsive-collapse">
+								<ul class="nav">
+									<li class="active">
+										<a href="#">主页</a>
+									</li>
+									<li>
+										<a href="#">团队介绍</a>
+									</li>
+									<li class="dropdown">
+										 <a data-toggle="dropdown" class="dropdown-toggle" href="#">队员介绍<strong class="caret"></strong></a>
+										<ul class="dropdown-menu">
+											<li>
+												<a href="#">下拉导航1</a>
+											</li>
+											<li>
+												<a href="#">下拉导航2</a>
+											</li>
+											<li>
+												<a href="#">下拉导航3</a>
+											</li>
+											<li>
+												<a href="#">下拉导航4</a>
+											</li>
+											<li>
+												<a href="#">下拉导航5</a>
+											</li>
+											<li>
+												<a href="#">下拉导航6</a>
+											</li>
+											
+										</ul>
+									</li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</div>
+				<h2>
+					我们是 H5Pirates ！
+				</h2>
+				<p>我们是 H5Pirates ！<br>我们团队有6名成员，地理跨度达半个地球之广……<br>期待我们在百度前端学院的新征程！~~~</p>
+				<br>
+				<hr>
+				<h3>
+					<img src="https://avatars2.githubusercontent.com/u/13301116?v=3&s=460" alt="Lucinda-Aemilia">&nbsp;
+					<a href="https://github.com/Lucinda-Aemilia">Lucinda-Aemilia</a>
+				</h3>
+				<p>
+					介绍1
+				</p>
+				<hr>
+				<h3>
+					<img src="https://avatars0.githubusercontent.com/u/6036575?v=3&s=460" alt="Yohanematsu">&nbsp;
+					<a href="https://github.com/ohanematsu ">ohanematsu</a>
+				</h3>
+				<p>
+					介绍2
+				</p>
+				<hr>
+				<h3>
+					<img src="https://avatars0.githubusercontent.com/u/10771591?v=3&s=460" alt="Yiming">&nbsp;
+					<a href="https://github.com/ymjrcc ">Yiming</a>
+				</h3>
+				<p>
+					生于1992，天蝎座，2014年毕业于天津大学。热爱互联网，热爱前端。现居武汉。
+				</p>
+				<hr>
+				<h3>
+					队员4
+				</h3>
+				<p>
+					介绍4
+				</p>
+				<hr>
+				<h3>
+					队员5
+				</h3>
+				<p>
+					介绍5
+				</p>
+				<hr>
+				<h3>
+					队员6
+				</h3>
+				<p>
+					介绍6
+				</p>
+			</div>
+		</div>
+	</div>	
 </body>
 </html>
+
