--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 				</p>
 				<hr>
 				<h3>
-					队员4
+					<img src="https://avatars0.githubusercontent.com/u/6380080?v=3&s=400" alt="AndyLiu">&nbsp;
+					<a href="https://github.com/ymjrcc ">AndyLiu</a>
 				</h3>
 				<p>
 					介绍4
