--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>h5p</title>
+	<title>H5Pirates</title>
 	<link href="http://www.francescomalagrino.com/BootstrapPageGenerator/3/css/bootstrap-combined.min.css" rel="stylesheet" media="screen">
 	<script type="text/javascript" src="http://www.francescomalagrino.com/BootstrapPageGenerator/3/js/jquery-2.0.0.min.js"></script>
 	<script type="text/javascript" src="http://www.francescomalagrino.com/BootstrapPageGenerator/3/js/jquery-ui"></script>
@@ -31,16 +31,16 @@
 										 <a data-toggle="dropdown" class="dropdown-toggle" href="#">队员介绍<strong class="caret"></strong></a>
 										<ul class="dropdown-menu">
 											<li>
-												<a href="#">下拉导航1</a>
+												<a href="#">Lucinda-Aemilia</a>
 											</li>
 											<li>
-												<a href="#">下拉导航2</a>
+												<a href="#">ohanematsu</a>
 											</li>
 											<li>
-												<a href="#">下拉导航3</a>
+												<a href="#">Yiming</a>
 											</li>
 											<li>
-												<a href="#">下拉导航4</a>
+												<a href="#">AndyLiu</a>
 											</li>
 											<li>
 												<a href="#">下拉导航5</a>
