--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 										<a href="#">团队介绍</a>
 									</li>
 									<li class="dropdown">
-										 <a data-toggle="dropdown" class="dropdown-toggle" href="#">队员介绍<strong class="caret"></strong></a>
+										 <a data-toggle="dropdown" class="dropdown-toggle" href="#">队员列表<strong class="caret"></strong></a>
 										<ul class="dropdown-menu">
 											<li>
 												<a href="#">Lucinda-Aemilia</a>
