--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 												<a href="#">AndyLiu</a>
 											</li>
 											<li>
-												<a href="#">下拉导航5</a>
+												<a href="#">yuqiyuqi</a>
 											</li>
 											<li>
 												<a href="#">下拉导航6</a>
@@ -88,14 +88,15 @@
 				<hr>
 				<h3>
 					<img src="https://avatars0.githubusercontent.com/u/6380080?v=3&s=400" alt="AndyLiu">&nbsp;
-					<a href="https://github.com/ymjrcc ">AndyLiu</a>
+					<a href="https://github.com/AndyHelix ">AndyLiu</a>
 				</h3>
 				<p>
 					介绍4
 				</p>
 				<hr>
 				<h3>
-					队员5
+					<img src="https://avatars3.githubusercontent.com/u/6618016?v=3&s=460" alt="yuqiyuqi">&nbsp;
+					<a href="https://github.com/yuqiyuqi ">yuqiyuqi</a>
 				</h3>
 				<p>
 					介绍5
