Add Lucinda-Aemilia's introduction

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					<a href="https://github.com/Lucinda-Aemilia">Lucinda-Aemilia</a>
 				</h3>
 				<p>
-					介绍1
+					一枚不太文艺的青年，好搞计算机而无基础，不得不天天求甚解，每有会意，便欣然忘食。
 				</p>
 				<hr>
 				<h3>
