--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
 				<div class="navbar">
 					<div class="navbar-inner">
 						<div class="container-fluid">
-							 <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a href="#" class="brand">H5Pirates</a>
+							 <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar">
+							 	<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+							 </a> 
+							 <a href="#" class="brand">H5Pirates</a>
 							<div class="nav-collapse collapse navbar-responsive-collapse">
 								<ul class="nav">
 									<li class="active">
