--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 					<div class="navbar-inner">
 						<div class="container-fluid">
 							 <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar">
-							 	<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+							 	<span class="icon-bar"></span><span class="icon-bar"></span>
+							 	<span class="icon-bar"></span>
 							 </a> 
 							 <a href="#" class="brand">H5Pirates</a>
 							<div class="nav-collapse collapse navbar-responsive-collapse">
@@ -31,7 +32,9 @@
 										<a href="#">团队介绍</a>
 									</li>
 									<li class="dropdown">
-										 <a data-toggle="dropdown" class="dropdown-toggle" href="#">队员列表<strong class="caret"></strong></a>
+										 <a data-toggle="dropdown" class="dropdown-toggle" href="#">
+										 	队员列表<strong class="caret"></strong>
+										 </a>
 										<ul class="dropdown-menu">
 											<li>
 												<a href="#">Lucinda-Aemilia</a>
