--- a/index.html
+++ b/index.html
@@ -102,17 +102,17 @@
 				<hr>
 				<h3>
 					<img src="https://avatars3.githubusercontent.com/u/6618016?v=3&s=460" alt="yuqiyuqi">&nbsp;
-					<a href="https://github.com/yuqiyuqi ">yuqiyuqi</a>
+					<a href="https://github.com/yuqiyuqi ">edcent</a>
 				</h3>
 				<p>
-					介绍5
+					硕士毕业半年多，湾区工作。主要写前端。
 				</p>
 				<hr>
 				<h3>
-					队员6
+					Mr.5MillionDollars
 				</h3>
 				<p>
-					介绍6
+					壕
 				</p>
 			</div>
 		</div>
