--- a/index.html
+++ b/index.html
@@ -109,9 +109,11 @@
 				</p>
 				<hr>
 				<h3>
+					<img src="https://avatars2.githubusercontent.com/u/3435267?v=3&s=460" alt="akaashmyth">&nbsp;
+					<a href="https://github.com/akaashmyth ">akaashmyth</a>
 				</h3>
 				<p>
-					
+					前端端工作者
 				</p>
 			</div>
 		</div>
