--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<a href="https://github.com/AndyHelix ">AndyLiu</a>
 				</h3>
 				<p>
-					介绍4
+					计算机基础为零又对搬砖各种姿势感兴趣。目前在学习PHP剑术。Cowboy Bebop爱好者。
 				</p>
 				<hr>
 				<h3>
