--- a/index.html
+++ b/index.html
@@ -3,74 +3,99 @@
 <head>
 	<meta charset="UTF-8">
 	<title>H5Pirates</title>
-	<link href="http://www.francescomalagrino.com/BootstrapPageGenerator/3/css/bootstrap-combined.min.css" rel="stylesheet" media="screen">
-	<script type="text/javascript" src="http://www.francescomalagrino.com/BootstrapPageGenerator/3/js/jquery-2.0.0.min.js"></script>
-	<script type="text/javascript" src="http://www.francescomalagrino.com/BootstrapPageGenerator/3/js/jquery-ui"></script>
-	<script type="text/javascript" src="http://www.francescomalagrino.com/BootstrapPageGenerator/3/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<style>
-		img{width:50px;height: 50px}
+		h3 {margin-top: 10px}
+		img {width:150px; height: 150px; border-radius: 50%}
+		.container-fluid {width: 960px;}
+		.thumbnail {height: 284px; border: 0}
+		#team-introduction {margin-bottom: 20px}
 	</style>
 </head>
 <body>
 	<div class="container-fluid text-center">
-		<div class="row-fluid">
-			<div class="span12">
-				<h2>
-					我们是 H5Pirates ！
-				</h2>
-				<p>我们是 H5Pirates ！<br>我们团队有6名成员，地理跨度达半个地球之广……<br>期待我们在百度前端学院的新征程！~~~</p>
+		<div id="team-introduction">
+			<h1>我们是 H5Pirates ！</h1>
+			<p class="lead" style="margin-bottom: 0">
+				我们是 H5Pirates ！
 				<br>
-				<hr>
-				<h3>
-					<img src="https://avatars2.githubusercontent.com/u/13301116?v=3&s=460" alt="Lucinda-Aemilia">&nbsp;
-					<a href="https://github.com/Lucinda-Aemilia">Lucinda-Aemilia</a>
-				</h3>
-				<p>
-					一枚不太文艺的青年，好搞计算机而无基础，不得不天天求甚解，每有会意，便欣然忘食。
-				</p>
-				<hr>
-				<h3>
-					<img src="https://avatars0.githubusercontent.com/u/6036575?v=3&s=460" alt="Ohanematsu">&nbsp;
-					<a href="https://github.com/ohanematsu">Ohanematsu</a>
-				</h3>
-				<p>
-					身在后端，心向前端，现在美帝湾区一公司搬砖。
-				</p>
-				<hr>
-				<h3>
-					<img src="https://avatars0.githubusercontent.com/u/10771591?v=3&s=460" alt="Yiming">&nbsp;
-					<a href="https://github.com/ymjrcc ">Yiming</a>
-				</h3>
-				<p>
-					生于1992，天蝎座，2014年毕业于天津大学。热爱互联网，热爱前端。现居武汉。
-				</p>
-				<hr>
-				<h3>
-					<img src="https://avatars0.githubusercontent.com/u/6380080?v=3&s=400" alt="AndyLiu">&nbsp;
-					<a href="https://github.com/AndyHelix ">AndyLiu</a>
-				</h3>
-				<p>
-					计算机基础为零又对搬砖各种姿势感兴趣。目前在学习PHP剑术。Cowboy Bebop爱好者。
-				</p>
-				<hr>
-				<h3>
-					<img src="https://avatars3.githubusercontent.com/u/6618016?v=3&s=460" alt="yuqiyuqi">&nbsp;
-					<a href="https://github.com/yuqiyuqi ">edcent</a>
-				</h3>
-				<p>
-					硕士毕业半年多，湾区工作。主要写前端。
-				</p>
-				<hr>
-				<h3>
-					<img src="https://avatars2.githubusercontent.com/u/3435267?v=3&s=460" alt="akaashmyth">&nbsp;
-					<a href="https://github.com/akaashmyth ">akaashmyth</a>
-				</h3>
-				<p>
-					前端端工作者
-				</p>
+				我们团队有6名成员，地理跨度达半个地球之广……<br>期待我们在百度前端学院的新征程！~~~
+			</p>
+		</div>
+		<div id="teammember-introduction">
+			<div class="row">
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+						<img src="https://avatars2.githubusercontent.com/u/13301116?v=3&s=460" alt="Lucinda-Aemilia">
+						<div class="caption">
+							<h3>
+								<a href="https://github.com/Lucinda-Aemilia">Lucinda-Aemilia</a>
+							</h3>
+							<p>一枚不太文艺的青年，好搞计算机而无基础，不得不天天求甚解，每有会意，便欣然忘食</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+						<img src="https://avatars0.githubusercontent.com/u/6036575?v=3&s=460" alt="Ohanematsu">
+						<div class="caption">
+							<h3>
+								<a href="https://github.com/ohanematsu">Ohanematsu</a>
+							</h3>
+							<p>身在后端，心向前端，现在美帝湾区一公司搬砖。</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+						<img src="https://avatars0.githubusercontent.com/u/10771591?v=3&s=460" alt="Yiming">
+						<div class="caption">
+							<h3>
+								<a href="https://github.com/ymjrcc ">Yiming</a>
+							</h3>
+							<p>生于1992，天蝎座，2014年毕业于天津大学。热爱互联网，热爱前端。现居武汉。</p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+						<img src="https://avatars0.githubusercontent.com/u/6380080?v=3&s=400" alt="AndyLiu">
+						<div class="caption">
+							<h3>
+								<a href="https://github.com/AndyHelix ">AndyLiu</a>
+							</h3>
+							<p>计算机基础为零又对搬砖各种姿势感兴趣。目前在学习PHP剑术。Cowboy Bebop爱好者。</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+						<img src="https://avatars3.githubusercontent.com/u/6618016?v=3&s=460" alt="yuqiyuqi">
+						<div class="caption">
+							<h3>
+								<a href="https://github.com/yuqiyuqi ">edcent</a>
+							</h3>
+							<p>硕士毕业半年多，湾区工作。主要写前端。</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6 col-md-4">
+					<div class="thumbnail">
+						<img src="https://avatars2.githubusercontent.com/u/3435267?v=3&s=460" alt="akaashmyth">
+						<div class="caption">
+							<h3>
+								<a href="https://github.com/akaashmyth ">akaashmyth</a>
+							</h3>
+							<p>前端端工作者</p>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>	
+	</div>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
 
