--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
 			</div>
 		</div>
 	</div>
+	<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.1.4.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </body>
 </html>
