delete the text-decoration on names

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<img src="https://avatars2.githubusercontent.com/u/13301116?v=3&s=460" alt="Lucinda-Aemilia">
 						<div class="caption">
 							<h3>
-								<a href="https://github.com/Lucinda-Aemilia">Lucinda-Aemilia</a>
+								<a href="https://github.com/Lucinda-Aemilia" style="text-decoration:none">Lucinda-Aemilia</a>
 							</h3>
 							<p>一枚不太文艺的青年，好搞计算机而无基础，不得不天天求甚解，每有会意，便欣然忘食</p>
 						</div>
@@ -40,7 +40,7 @@
 						<img src="https://avatars0.githubusercontent.com/u/6036575?v=3&s=460" alt="Ohanematsu">
 						<div class="caption">
 							<h3>
-								<a href="https://github.com/ohanematsu">Ohanematsu</a>
+								<a href="https://github.com/ohanematsu" style="text-decoration:none">Ohanematsu</a>
 							</h3>
 							<p>身在后端，心向前端，现在美帝湾区一公司搬砖。</p>
 						</div>
@@ -51,7 +51,7 @@
 						<img src="https://avatars0.githubusercontent.com/u/10771591?v=3&s=460" alt="Yiming">
 						<div class="caption">
 							<h3>
-								<a href="https://github.com/ymjrcc ">Yiming</a>
+								<a href="https://github.com/ymjrcc" style="text-decoration:none">Yiming</a>
 							</h3>
 							<p>生于1992，天蝎座，2014年毕业于天津大学。热爱互联网，热爱前端。现居武汉。</p>
 						</div>
@@ -64,7 +64,7 @@
 						<img src="https://avatars0.githubusercontent.com/u/6380080?v=3&s=400" alt="AndyLiu">
 						<div class="caption">
 							<h3>
-								<a href="https://github.com/AndyHelix ">AndyLiu</a>
+								<a href="https://github.com/AndyHelix" style="text-decoration:none">AndyLiu</a>
 							</h3>
 							<p>计算机基础为零又对搬砖各种姿势感兴趣。目前在学习PHP剑术。Cowboy Bebop爱好者。</p>
 						</div>
@@ -75,7 +75,7 @@
 						<img src="https://avatars3.githubusercontent.com/u/6618016?v=3&s=460" alt="yuqiyuqi">
 						<div class="caption">
 							<h3>
-								<a href="https://github.com/yuqiyuqi ">edcent</a>
+								<a href="https://github.com/yuqiyuqi" style="text-decoration:none">edcent</a>
 							</h3>
 							<p>硕士毕业半年多，湾区工作。主要写前端。</p>
 						</div>
@@ -86,7 +86,7 @@
 						<img src="https://avatars2.githubusercontent.com/u/3435267?v=3&s=460" alt="akaashmyth">
 						<div class="caption">
 							<h3>
-								<a href="https://github.com/akaashmyth ">akaashmyth</a>
+								<a href="https://github.com/akaashmyth" style="text-decoration:none">akaashmyth</a>
 							</h3>
 							<p>前端端工作者</p>
 						</div>
