Update self introduction

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<h3>
 								<a href="https://github.com/ohanematsu" style="text-decoration:none">Ohanematsu</a>
 							</h3>
-							<p>身在后端，心向前端，现在美帝湾区一公司搬砖。</p>
+							<p>硕士毕业半年。身在后端，心向前端，现在美帝湾区一公司搬砖。</p>
 						</div>
 					</div>
 				</div>
